# xmms-gtk-playlist

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.in  xmms-gtk-playlist.glade
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  globals.c  globals.h  gtkplaylist.c  init.c.h  interface.c  main.c  worker.c  worker.h
